force-app/main/default/objects/TW1_MODEC_Contract__c/TW1_MODEC_Contract__c.object-meta.xml
<CustomObject>
    <label>MODEC Contract</label>
    <nameField>
        <label>MODEC Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MODEC Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>