force-app/main/default/objects/TW1_MODEC_Contract__c/fields/T_Signed_Contract_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Signed_Contract_Upload_Date__c</fullName>
    <label>Signed Contract Upload Date</label>
    <type>Date</type>
</CustomField>