force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Accumulated_Contract_Amout__c.field-meta.xml
<CustomField>
    <fullName>TW1_Accumulated_Contract_Amout__c</fullName>
    <formula>TW1_Previous_Contract_Amount_A__c + TW1_Contracted_Value_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accumulated Contract Amout (A+B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>