force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_BID__c.field-meta.xml
<CustomField>
    <fullName>TW1_BID__c</fullName>
    <label>BID?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>