force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Contempled_in_this_Agreement__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contempled_in_this_Agreement__c</fullName>
    <label>Contempled in this Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>