force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Contract_Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Scope_Description__c</fullName>
    <label>Contract Scope Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>