force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Contracted_Value_B__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contracted_Value_B__c</fullName>
    <label>Contracted Value (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>