force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>40</length>
    <type>Text</type>
</CustomField>