force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Cost_Controller__c.field-meta.xml
<CustomField>
    <fullName>TW1_Cost_Controller__c</fullName>
    <label>Cost Controller</label>
    <length>40</length>
    <type>Text</type>
</CustomField>