force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>TW1_Days_to_Expire__c</fullName>
    <formula>IF( TW1_End_Date__c &lt; TODAY(),0,TW1_End_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>