force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>TW1_Department_Code__c</fullName>
    <label>Department Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>