force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Duration__c.field-meta.xml
<CustomField>
    <fullName>TW1_Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>