force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_DurationF__c.field-meta.xml
<CustomField>
    <fullName>TW1_DurationF__c</fullName>
    <formula>TEXT( TW2_Duration_in_Months__c ) + &quot; Months&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>