force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Escalation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IGPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>