force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_I_m_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_I_m_Vendor__c</fullName>
    <formula>IF( TW1_Vendor__r.TW1_Step_Owner__c = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I&apos;m Supplier</label>
    <type>Checkbox</type>
</CustomField>