force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Increase__c.field-meta.xml
<CustomField>
    <fullName>TW1_Increase__c</fullName>
    <label>Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>