force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>TW1_Job_Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>