force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Justification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Justification__c</fullName>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>