force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>TW1_Main_Contact__c</fullName>
    <formula>TW1_Vendor__r.TW1_Main_Contact__r.FirstName +&quot; &quot;+ TW1_Vendor__r.TW1_Main_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact</label>
    <type>Text</type>
</CustomField>