force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Monthly_If_Fixed__c.field-meta.xml
<CustomField>
    <fullName>TW1_Monthly_If_Fixed__c</fullName>
    <label>Monthly (If Fixed)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depends Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>