force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>TW1_Party_Email__c</fullName>
    <formula>TW1_Vendor__r.TW1_Company_Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Email</label>
    <type>Text</type>
</CustomField>