force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Payment_Conditions__c.field-meta.xml
<CustomField>
    <fullName>TW1_Payment_Conditions__c</fullName>
    <label>Payment Conditions</label>
    <type>TextArea</type>
</CustomField>