force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>TW1_Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>75 Days</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>