force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>