force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Previous_Contract_Amount_A__c.field-meta.xml
<CustomField>
    <fullName>TW1_Previous_Contract_Amount_A__c</fullName>
    <label>Previous Contract Amount (A):</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>