force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>TW1_Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contract</label>
    <referenceTo>TW1_MODEC_Contract__c</referenceTo>
    <relationshipLabel>MODEC Contracts</relationshipLabel>
    <relationshipName>Related_MODEC_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>