force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Requestor_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Requestor_Sponsor__c</fullName>
    <label>Requestor/Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>