force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_SAP_Outline_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_SAP_Outline_Agreement_Number__c</fullName>
    <label>SAP Outline Agreement Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>