force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Termination_Conditions_Penalty__c.field-meta.xml
<CustomField>
    <fullName>TW1_Termination_Conditions_Penalty__c</fullName>
    <label>Termination: Conditions/Penalty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>