force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Type_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>TW1_Type_of_Contract__c</fullName>
    <label>Type of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent/Lease</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>