force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MODEC Contracts</relationshipLabel>
    <relationshipName>MODEC_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>