force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_Vendor_Vetting__c.field-meta.xml
<CustomField>
    <fullName>TW1_Vendor_Vetting__c</fullName>
    <formula>TEXT(TW1_Vendor__r.TW1_Vendor_Vetting__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Vetting</label>
    <type>Text</type>
</CustomField>