force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW1_WBS_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_WBS_Number__c</fullName>
    <label>WBS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>