force-app/main/default/objects/TW1_MODEC_Contract__c/fields/TW2_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>TW2_Duration_in_Months__c</fullName>
    <formula>MONTH(TW1_End_Date__c) - MONTH(TW1_Start_Date__c) + 12*(YEAR(TW1_End_Date__c) - YEAR(TW1_Start_Date__c)) - IF(DAY(TW1_End_Date__c) &lt; DAY(TW1_Start_Date__c),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>