force-app/main/default/objects/TW1_MODEC_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TW1_Vendor__c</columns>
    <columns>NAME</columns>
    <columns>TW1_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TW1_Duration__c</columns>
    <columns>TW1_Vendor_CNPJ__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>