force-app/main/default/objects/TW1_MODEC_Contract__c/listViews/My_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Contracts</fullName>
    <columns>TW1_PO_Number__c</columns>
    <columns>TW1_Status__c</columns>
    <columns>TW1_Date__c</columns>
    <columns>TW1_DurationF__c</columns>
    <columns>TW1_Days_to_Expire__c</columns>
    <columns>TW1_Contracted_Value_B__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TW1_I_m_Vendor__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meus Contratos</label>
</ListView>